--- a/site67/product/pink-ceramic-plates/index.html
+++ b/site67/product/pink-ceramic-plates/index.html
@@ -118,10 +118,10 @@
 <li id="menu-item-521" class="menu-item menu-item-type-custom menu-item-object-custom fusion-dropdown-menu menu-item-has-children avada-menu-login-box menu-item-521" data-item-id="521">
 <span class="background-default transition-fade"></span><span class="background-active transition-fade"></span><a href="/site67/my-account-2/" aria-haspopup="true" class="fusion-icon-only-link fusion-flex-link fusion-background-highlight"><span class="fusion-megamenu-icon"><i class="glyphicon nutritionist-user" aria-hidden="true"></i></span><span class="menu-text">WooCommerce My Account</span><span class="fusion-open-nav-submenu"></span></a><ul class="sub-menu avada-custom-menu-item-contents"><li class="menu-item">
 <form action="https://web-aku9.run-us-west2.goorm.io/site67/wp-login.php" name="loginform" method="post">
-<p><label class="screen-reader-text hidden" for="username">Username:</label><input type="text" class="input-text" name="log" id="username-woocommerce-menu-62f151babd096" value="" placeholder="Username"></p>
-<p><label class="screen-reader-text hidden" for="password">Password:</label><input type="password" class="input-text" name="pwd" id="password-woocommerce-menu-62f151babd096" value="" placeholder="Password"></p>
-<p class="fusion-remember-checkbox"><label for="fusion-menu-login-box-rememberme"><input name="rememberme" type="checkbox" id="fusion-menu-login-box-rememberme-woocommerce-menu-62f151babd096" value="forever"> Remember Me</label></p>
-<input type="hidden" name="fusion_woo_login_box" value="true"><p class="fusion-login-box-submit"><input type="submit" name="wp-submit" id="wp-submit-woocommerce-menu-62f151babd096" class="button button-small default comment-submit" value="Log In"><input type="hidden" name="redirect" value="https://web-aku9.run-us-west2.goorm.io/site67/product/pink-ceramic-plates/"></p>
+<p><label class="screen-reader-text hidden" for="username">Username:</label><input type="text" class="input-text" name="log" id="username-woocommerce-menu-62f25ec1ca919" value="" placeholder="Username"></p>
+<p><label class="screen-reader-text hidden" for="password">Password:</label><input type="password" class="input-text" name="pwd" id="password-woocommerce-menu-62f25ec1ca919" value="" placeholder="Password"></p>
+<p class="fusion-remember-checkbox"><label for="fusion-menu-login-box-rememberme"><input name="rememberme" type="checkbox" id="fusion-menu-login-box-rememberme-woocommerce-menu-62f25ec1ca919" value="forever"> Remember Me</label></p>
+<input type="hidden" name="fusion_woo_login_box" value="true"><p class="fusion-login-box-submit"><input type="submit" name="wp-submit" id="wp-submit-woocommerce-menu-62f25ec1ca919" class="button button-small default comment-submit" value="Log In"><input type="hidden" name="redirect" value="https://web-aku9.run-us-west2.goorm.io/site67/product/pink-ceramic-plates/"></p>
 </form>
 <div><a class="fusion-menu-login-box-register" href="/site67/my-account-2/" title="Register">Register</a></div>
 </li></ul>
@@ -166,8 +166,8 @@
 	<form class="cart" action="https://web-aku9.run-us-west2.goorm.io/site67/product/pink-ceramic-plates/" method="post" enctype="multipart/form-data">
 		<div class="fusion-button-wrapper">
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_62f151bb0fb9f">Pink ceramic plates quantity</label>
-		<input type="number" id="quantity_62f151bb0fb9f" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
+				<label class="screen-reader-text" for="quantity_62f25ec1e2e13">Pink ceramic plates quantity</label>
+		<input type="number" id="quantity_62f25ec1e2e13" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="741" class="single_add_to_cart_button button alt">Add to cart</button>
@@ -390,7 +390,7 @@
 						<div class="fusion-woocommerce-quick-view-overlay"></div>
 <div class="fusion-woocommerce-quick-view-container quick-view woocommerce">
 	<script type="text/javascript">
-		var quickViewNonce =  '2e891f38f8';
+		var quickViewNonce =  '63f18113fb';
 	</script>
 
 	<div class="fusion-wqv-close">
