--- a/site73/product/animal-transport-cage/index.html
+++ b/site73/product/animal-transport-cage/index.html
@@ -119,10 +119,10 @@ Pellentesque in ipsum id orci porta dapibus. Sed porttitor lectus nibh. Vestibul
 <li id="menu-item-1335" class="menu-item menu-item-type-custom menu-item-object-custom fusion-dropdown-menu menu-item-has-children avada-menu-login-box menu-item-1335" data-item-id="1335">
 <span class="background-default transition-fade"></span><span class="background-active transition-fade"></span><a href="/site73/my-account-2/" aria-haspopup="true" class="fusion-icon-only-link fusion-flex-link fusion-background-highlight"><span class="fusion-megamenu-icon"><i class="glyphicon petsupplies-user" aria-hidden="true"></i></span><span class="menu-text">WooCommerce My Account</span><span class="fusion-open-nav-submenu"></span></a><ul class="sub-menu avada-custom-menu-item-contents"><li class="menu-item">
 <form action="https://web-aku9.run-us-west2.goorm.io/site73/wp-login.php" name="loginform" method="post">
-<p><label class="screen-reader-text hidden" for="username">Username:</label><input type="text" class="input-text" name="log" id="username-cart-account-menu-62f15c0f7c194" value="" placeholder="Username"></p>
-<p><label class="screen-reader-text hidden" for="password">Password:</label><input type="password" class="input-text" name="pwd" id="password-cart-account-menu-62f15c0f7c194" value="" placeholder="Password"></p>
-<p class="fusion-remember-checkbox"><label for="fusion-menu-login-box-rememberme"><input name="rememberme" type="checkbox" id="fusion-menu-login-box-rememberme-cart-account-menu-62f15c0f7c194" value="forever"> Remember Me</label></p>
-<input type="hidden" name="fusion_woo_login_box" value="true"><p class="fusion-login-box-submit"><input type="submit" name="wp-submit" id="wp-submit-cart-account-menu-62f15c0f7c194" class="button button-small default comment-submit" value="Log In"><input type="hidden" name="redirect" value="https://web-aku9.run-us-west2.goorm.io/site73/product/animal-transport-cage/"></p>
+<p><label class="screen-reader-text hidden" for="username">Username:</label><input type="text" class="input-text" name="log" id="username-cart-account-menu-62f26a759410f" value="" placeholder="Username"></p>
+<p><label class="screen-reader-text hidden" for="password">Password:</label><input type="password" class="input-text" name="pwd" id="password-cart-account-menu-62f26a759410f" value="" placeholder="Password"></p>
+<p class="fusion-remember-checkbox"><label for="fusion-menu-login-box-rememberme"><input name="rememberme" type="checkbox" id="fusion-menu-login-box-rememberme-cart-account-menu-62f26a759410f" value="forever"> Remember Me</label></p>
+<input type="hidden" name="fusion_woo_login_box" value="true"><p class="fusion-login-box-submit"><input type="submit" name="wp-submit" id="wp-submit-cart-account-menu-62f26a759410f" class="button button-small default comment-submit" value="Log In"><input type="hidden" name="redirect" value="https://web-aku9.run-us-west2.goorm.io/site73/product/animal-transport-cage/"></p>
 </form>
 <div><a class="fusion-menu-login-box-register" href="/site73/my-account-2/" title="Register">Register</a></div>
 </li></ul>
@@ -221,10 +221,10 @@ Pellentesque in ipsum id orci porta dapibus. Sed porttitor lectus nibh. Vestibul
 <li class="menu-item menu-item-type-custom menu-item-object-custom fusion-dropdown-menu menu-item-has-children avada-menu-login-box menu-item-1335" data-item-id="1335">
 <span class="background-default transition-fade"></span><span class="background-active transition-fade"></span><a href="/site73/my-account-2/" aria-haspopup="true" class="fusion-icon-only-link fusion-flex-link fusion-background-highlight"><span class="fusion-megamenu-icon"><i class="glyphicon petsupplies-user" aria-hidden="true"></i></span><span class="menu-text">WooCommerce My Account</span><span class="fusion-open-nav-submenu"></span></a><ul class="sub-menu avada-custom-menu-item-contents"><li class="menu-item">
 <form action="https://web-aku9.run-us-west2.goorm.io/site73/wp-login.php" name="loginform" method="post">
-<p><label class="screen-reader-text hidden" for="username">Username:</label><input type="text" class="input-text" name="log" id="username-cart-account-menu-62f15c0fa618a" value="" placeholder="Username"></p>
-<p><label class="screen-reader-text hidden" for="password">Password:</label><input type="password" class="input-text" name="pwd" id="password-cart-account-menu-62f15c0fa618a" value="" placeholder="Password"></p>
-<p class="fusion-remember-checkbox"><label for="fusion-menu-login-box-rememberme"><input name="rememberme" type="checkbox" id="fusion-menu-login-box-rememberme-cart-account-menu-62f15c0fa618a" value="forever"> Remember Me</label></p>
-<input type="hidden" name="fusion_woo_login_box" value="true"><p class="fusion-login-box-submit"><input type="submit" name="wp-submit" id="wp-submit-cart-account-menu-62f15c0fa618a" class="button button-small default comment-submit" value="Log In"><input type="hidden" name="redirect" value="https://web-aku9.run-us-west2.goorm.io/site73/product/animal-transport-cage/"></p>
+<p><label class="screen-reader-text hidden" for="username">Username:</label><input type="text" class="input-text" name="log" id="username-cart-account-menu-62f26a75b1b99" value="" placeholder="Username"></p>
+<p><label class="screen-reader-text hidden" for="password">Password:</label><input type="password" class="input-text" name="pwd" id="password-cart-account-menu-62f26a75b1b99" value="" placeholder="Password"></p>
+<p class="fusion-remember-checkbox"><label for="fusion-menu-login-box-rememberme"><input name="rememberme" type="checkbox" id="fusion-menu-login-box-rememberme-cart-account-menu-62f26a75b1b99" value="forever"> Remember Me</label></p>
+<input type="hidden" name="fusion_woo_login_box" value="true"><p class="fusion-login-box-submit"><input type="submit" name="wp-submit" id="wp-submit-cart-account-menu-62f26a75b1b99" class="button button-small default comment-submit" value="Log In"><input type="hidden" name="redirect" value="https://web-aku9.run-us-west2.goorm.io/site73/product/animal-transport-cage/"></p>
 </form>
 <div><a class="fusion-menu-login-box-register" href="/site73/my-account-2/" title="Register">Register</a></div>
 </li></ul>
@@ -241,10 +241,10 @@ Pellentesque in ipsum id orci porta dapibus. Sed porttitor lectus nibh. Vestibul
 <li class="menu-item menu-item-type-custom menu-item-object-custom fusion-dropdown-menu menu-item-has-children avada-menu-login-box menu-item-1335" data-item-id="1335">
 <span class="background-default transition-fade"></span><span class="background-active transition-fade"></span><a href="/site73/my-account-2/" aria-haspopup="true" class="fusion-icon-only-link fusion-flex-link fusion-background-highlight"><span class="fusion-megamenu-icon"><i class="glyphicon petsupplies-user" aria-hidden="true"></i></span><span class="menu-text">WooCommerce My Account</span><span class="fusion-open-nav-submenu"></span></a><ul class="sub-menu avada-custom-menu-item-contents"><li class="menu-item">
 <form action="https://web-aku9.run-us-west2.goorm.io/site73/wp-login.php" name="loginform" method="post">
-<p><label class="screen-reader-text hidden" for="username">Username:</label><input type="text" class="input-text" name="log" id="username-cart-account-menu-62f15c0faacde" value="" placeholder="Username"></p>
-<p><label class="screen-reader-text hidden" for="password">Password:</label><input type="password" class="input-text" name="pwd" id="password-cart-account-menu-62f15c0faacde" value="" placeholder="Password"></p>
-<p class="fusion-remember-checkbox"><label for="fusion-menu-login-box-rememberme"><input name="rememberme" type="checkbox" id="fusion-menu-login-box-rememberme-cart-account-menu-62f15c0faacde" value="forever"> Remember Me</label></p>
-<input type="hidden" name="fusion_woo_login_box" value="true"><p class="fusion-login-box-submit"><input type="submit" name="wp-submit" id="wp-submit-cart-account-menu-62f15c0faacde" class="button button-small default comment-submit" value="Log In"><input type="hidden" name="redirect" value="https://web-aku9.run-us-west2.goorm.io/site73/product/animal-transport-cage/"></p>
+<p><label class="screen-reader-text hidden" for="username">Username:</label><input type="text" class="input-text" name="log" id="username-cart-account-menu-62f26a75c4bae" value="" placeholder="Username"></p>
+<p><label class="screen-reader-text hidden" for="password">Password:</label><input type="password" class="input-text" name="pwd" id="password-cart-account-menu-62f26a75c4bae" value="" placeholder="Password"></p>
+<p class="fusion-remember-checkbox"><label for="fusion-menu-login-box-rememberme"><input name="rememberme" type="checkbox" id="fusion-menu-login-box-rememberme-cart-account-menu-62f26a75c4bae" value="forever"> Remember Me</label></p>
+<input type="hidden" name="fusion_woo_login_box" value="true"><p class="fusion-login-box-submit"><input type="submit" name="wp-submit" id="wp-submit-cart-account-menu-62f26a75c4bae" class="button button-small default comment-submit" value="Log In"><input type="hidden" name="redirect" value="https://web-aku9.run-us-west2.goorm.io/site73/product/animal-transport-cage/"></p>
 </form>
 <div><a class="fusion-menu-login-box-register" href="/site73/my-account-2/" title="Register">Register</a></div>
 </li></ul>
@@ -344,8 +344,8 @@ Pellentesque in ipsum id orci porta dapibus. Sed porttitor lectus nibh. Vestibul
 	<form class="cart" action="https://web-aku9.run-us-west2.goorm.io/site73/product/animal-transport-cage/" method="post" enctype="multipart/form-data">
 		<div class="fusion-button-wrapper">
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_62f15c0ff07d7">Animal transport cage quantity</label>
-		<input type="number" id="quantity_62f15c0ff07d7" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
+				<label class="screen-reader-text" for="quantity_62f26a7603948">Animal transport cage quantity</label>
+		<input type="number" id="quantity_62f26a7603948" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="182" class="single_add_to_cart_button button alt">Add to cart</button>
@@ -681,7 +681,7 @@ Pellentesque in ipsum id orci porta dapibus. Sed porttitor lectus nibh. Vestibul
 						<div class="fusion-woocommerce-quick-view-overlay"></div>
 <div class="fusion-woocommerce-quick-view-container quick-view woocommerce">
 	<script type="text/javascript">
-		var quickViewNonce =  '2e891f38f8';
+		var quickViewNonce =  '63f18113fb';
 	</script>
 
 	<div class="fusion-wqv-close">
