--- a/site74/product/the-ultimate-guide-to-essay-writing/index.html
+++ b/site74/product/the-ultimate-guide-to-essay-writing/index.html
@@ -232,8 +232,8 @@
 	<form class="cart" action="https://web-aku9.run-us-west2.goorm.io/site74/product/the-ultimate-guide-to-essay-writing/" method="post" enctype="multipart/form-data">
 		<div class="fusion-button-wrapper">
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_62f1605aef697">The Ultimate Guide To Essay Writing quantity</label>
-		<input type="number" id="quantity_62f1605aef697" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
+				<label class="screen-reader-text" for="quantity_62f26e6b03b11">The Ultimate Guide To Essay Writing quantity</label>
+		<input type="number" id="quantity_62f26e6b03b11" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="191" class="single_add_to_cart_button button alt">Add to cart</button>
@@ -511,7 +511,7 @@
 						<div class="fusion-woocommerce-quick-view-overlay"></div>
 <div class="fusion-woocommerce-quick-view-container quick-view woocommerce">
 	<script type="text/javascript">
-		var quickViewNonce =  '2e891f38f8';
+		var quickViewNonce =  '63f18113fb';
 	</script>
 
 	<div class="fusion-wqv-close">
