--- a/site77/product/chunky-choco-pudding/index.html
+++ b/site77/product/chunky-choco-pudding/index.html
@@ -163,8 +163,8 @@
 	<form class="cart" action="https://web-aku9.run-us-west2.goorm.io/site77/product/chunky-choco-pudding/" method="post" enctype="multipart/form-data">
 		<div class="fusion-button-wrapper">
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_62f1664d0e194">Chunky Choco Pudding quantity</label>
-		<input type="number" id="quantity_62f1664d0e194" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
+				<label class="screen-reader-text" for="quantity_62f274d9558d0">Chunky Choco Pudding quantity</label>
+		<input type="number" id="quantity_62f274d9558d0" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="271" class="single_add_to_cart_button button alt">Add to cart</button>
@@ -393,7 +393,7 @@
 						<div class="fusion-woocommerce-quick-view-overlay"></div>
 <div class="fusion-woocommerce-quick-view-container quick-view woocommerce">
 	<script type="text/javascript">
-		var quickViewNonce =  '2e891f38f8';
+		var quickViewNonce =  '63f18113fb';
 	</script>
 
 	<div class="fusion-wqv-close">
