--- a/site77/product/shakes/index.html
+++ b/site77/product/shakes/index.html
@@ -182,8 +182,8 @@
 <div class="woocommerce-variation-add-to-cart variations_button">
 	<div class="fusion-button-wrapper">
 		<div class="quantity">
-				<label class="screen-reader-text" for="quantity_62f1665cbc6d8">Shakes quantity</label>
-		<input type="number" id="quantity_62f1665cbc6d8" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
+				<label class="screen-reader-text" for="quantity_62f274e3b249c">Shakes quantity</label>
+		<input type="number" id="quantity_62f274e3b249c" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
 			</div>
 	
 	<button type="submit" class="single_add_to_cart_button button alt">Add to cart</button>
@@ -435,7 +435,7 @@
 						<div class="fusion-woocommerce-quick-view-overlay"></div>
 <div class="fusion-woocommerce-quick-view-container quick-view woocommerce">
 	<script type="text/javascript">
-		var quickViewNonce =  '2e891f38f8';
+		var quickViewNonce =  '63f18113fb';
 	</script>
 
 	<div class="fusion-wqv-close">
